[project]
name = "umi-arx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=16.0.1",
    "click>=8.3.0",
    "numcodecs>=0.13.1",
    "numpy==1.24.4",
    "omegaconf>=2.3.0",
    "pynput>=1.8.1",
    "pyzmq>=27.1.0",
    "scipy>=1.15.3",
    "threadpoolctl>=3.6.0",
    "zarr>=2.18.3",
]
